# mdai-designer

./: .env.local-EXAMPLE  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-ANALYSIS.md  MIGRATION.md  NOTICE.md  README.md  example-model-driven-generation.md  license-report.json  licenses.csv  package-lock.json  package.json  vite.config.ts
.github/workflows/: e2e-test.yml
docs/: 01-architecture.md  02-development-guide.md  03-components.md  05-troubleshooting.md  06-mcp-integration.md
docs/04-features/: ai-modification.md  chat-panel.md  document-types.md  fortune-sheet.md  mermaid-editor.md  model-driven.md  project-export.md
e2e-tests/: README.md  package-lock.json  package.json  playwright.config.ts
e2e-tests/current/: README.md  TEST_PROGRESS_REPORT.md  document-lifecycle.spec.ts  document-types.spec.ts  project-management.spec.ts
e2e-tests/legacy/: README.md
e2e-tests/tests/: spreadsheet-integration.spec.ts
mcp-server/: .env.example  README.md  TECHNICAL.md  pyproject.toml  test_server_init.py
mcp-server/src/mdai_mcp_server/: __init__.py  ai_service.py  http_server.py  server.py  start_http.py
mcp-server/src/mdai_mcp_server/tools/: __init__.py  design_draft_generator.py  model_generator.py
mcp-server/tests/: test_model_generator.py
src/: App.tsx  index.css
src/hooks/: useAppState.ts  useDocumentState.ts  useFileOperations.ts  useInitialData.ts  useProjectOperations.ts  useSpreadsheetOperations.ts  useTabNavigation.ts
src/services/: aiService.ts  aiServiceLegacy.ts  backupService.ts  documentReferenceService.ts  mcpClient.ts  (+1 more)
(+46 files in other folders)
